# Devora

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  USER_GUIDE.md  VERSION  additional-instructions.md  cc-simple-statusline.sh  ccc.sh  cut-release.sh  install.sh  mise.toml
bundler/: 3rd-party-deps.json  CLAUDE.md  (+7 more)
project-ember/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
project-ember/src-tauri/capabilities/: main.json
project-ember/src-tauri/permissions/autogenerated/: __test_report.toml  add_repo_to_workspace.toml  cancel_workspace_creation.toml  clear_asana_token.toml  clone_repo_into_profile.toml  close_pty.toml  create_pty.toml  crit_overlay_dismissed.toml  delete_workspace.toml  get_all_workspace_statuses.toml  get_asana_token_status.toml  get_claude_settings.toml  get_config_settings.toml  get_default_app.toml  get_registered_repos.toml  get_user_guide_path.toml  get_workspace_status.toml  list_profiles.toml  log_error.toml  prepare_repurpose_task.toml  register_profile.toml  remove_task.toml  repurpose_task.toml  run_health_check.toml  save_profiling_report.toml  set_asana_token.toml  set_claude_setting.toml  set_config_setting.toml  unregister_profile.toml  validate_profile_path.toml
project-ember/src-tauri/src/: commands.rs  credentials.rs  health.rs  http_util.rs  ipc_server.rs  lib.rs  logging.rs  main.rs  profile.rs  pty.rs  repo_clone.rs  test_harness.rs  theme.rs  workspace.rs  workspace_creation.rs
project-ember/src-tauri/tests/: acl_completeness.rs
(+360 files in other folders)
