[package]
name = "devora-ember"
version = "0.1.0"
edition = "2021"

[lib]
name = "devora_ember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
